examples/test/testpolicy5021.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5021
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key49: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value5
          key31: value15
          key34: value5
      podSelector:
        matchLabels:
          key12: value14
